Fix Project Page alignment

--- a/style/project.scss
+++ b/style/project.scss
@@ -1,7 +1,7 @@
 .project-page {
     max-width: 160rem;
     display: flex;
-    align-items: end;
+    align-items: start;
     flex-flow: column;
     margin: 2em 8em;
     padding-bottom: 6rem;
